--- a/1_3版本需求.html
+++ b/1_3版本需求.html
@@ -311,13 +311,13 @@
         <div id="u38" class="ax_default table_cell">
           <img id="u38_img" class="img " src="images/1_3版本需求/u38.png"/>
           <div id="u38_text" class="text ">
-            <p><span>1）“发货状态”改为：用户未确认、确认并待发货、已经发货、发货失败</span></p><p><span>2）点击“标记发货状态”，在弹窗中添加可编辑项 发货订单号/渠道商/金额（卢比）</span></p><p><span>3）状态为“已经发货”、”已收货“的条目，”操作“栏中添加”查看订单号/渠道商/金额“按钮，点击可查看订单号和渠道商</span></p>
+            <p><span>1）“发货状态”改为：用户未确认、确认并待发货、已经发货、发货失败</span></p><p><span>2）点击“标记发货状态”，在弹窗中添加可编辑项 发货订单号/渠道商/金额（卢比）</span></p><p><span>3）状态为“已经发货”、”已收货“的条目，”操作“栏中添加”查看订单号/渠道商/金额“按钮，点击可查看订单号、渠道商、金额</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
         <div id="u39" class="ax_default table_cell">
-          <img id="u39_img" class="img " src="images/1_3版本需求/u35.png"/>
+          <img id="u39_img" class="img " src="images/1_3版本需求/u39.png"/>
           <div id="u39_text" class="text ">
             <p><span>9</span></p>
           </div>
@@ -325,7 +325,7 @@
 
         <!-- Unnamed (单元格) -->
         <div id="u40" class="ax_default table_cell">
-          <img id="u40_img" class="img " src="images/1_3版本需求/u36.png"/>
+          <img id="u40_img" class="img " src="images/1_3版本需求/u40.png"/>
           <div id="u40_text" class="text ">
             <p><span>后台</span></p>
           </div>
@@ -333,7 +333,7 @@
 
         <!-- Unnamed (单元格) -->
         <div id="u41" class="ax_default table_cell">
-          <img id="u41_img" class="img " src="images/1_3版本需求/u37.png"/>
+          <img id="u41_img" class="img " src="images/1_3版本需求/u41.png"/>
           <div id="u41_text" class="text ">
             <p><span>新增统计管理</span></p>
           </div>
@@ -341,7 +341,7 @@
 
         <!-- Unnamed (单元格) -->
         <div id="u42" class="ax_default table_cell">
-          <img id="u42_img" class="img " src="images/1_3版本需求/u38.png"/>
+          <img id="u42_img" class="img " src="images/1_3版本需求/u42.png"/>
           <div id="u42_text" class="text ">
             <p><span>1）用户统计</span></p><p><span>2）渠道统计</span></p><p><span>3）夺宝统计</span></p><p><span>4）商品统计</span></p><p><span>5）机器人统计</span></p><p><span>6）发货订单统计</span></p>
           </div>
