--- a/game.html
+++ b/game.html
@@ -131,7 +131,7 @@
         <div id="u438" class="ax_default label">
           <div id="u438_div" class=""></div>
           <div id="u438_text" class="text ">
-            <p><span>Rules:</span></p><p><span><br></span></p><p><span>&nbsp;&nbsp;&nbsp; Top up ₹50 to play the game! First of all, you can get coins equal to the rupees you top up. Additionally, each goal you make will give you 1000 points. You will get extra coins according to the points you have.</span></p><p><span><br></span></p><p><span>0~2000&nbsp; &nbsp; &nbsp;&nbsp; pts&nbsp; &nbsp;&nbsp; no extra coin</span></p><p><span>3000~4000 pts&nbsp; &nbsp;&nbsp; 5 extra coins</span></p><p><span>5000&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; pts&nbsp; &nbsp;&nbsp; 10 extra coins</span></p>
+            <p><span>Rules:</span></p><p><span><br></span></p><p><span>&nbsp;&nbsp;&nbsp; Top up ₹50 to play the game! You will get at least 50 coins. Additionally, each goal you make will give you 1000 points. You will get extra coins according to the points you make.</span></p><p><span><br></span></p><p><span>0~2000&nbsp; &nbsp; &nbsp;&nbsp; pts&nbsp; &nbsp;&nbsp; no extra coin</span></p><p><span>3000~4000 pts&nbsp; &nbsp;&nbsp; 5 extra coins</span></p><p><span>5000&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; pts&nbsp; &nbsp;&nbsp; 10 extra coins</span></p>
           </div>
         </div>
 
@@ -198,7 +198,7 @@
       <div id="u447" class="ax_default label">
         <div id="u447_div" class=""></div>
         <div id="u447_text" class="text ">
-          <p><span>Well done! You win 5extra coins!</span></p>
+          <p><span style="font-family:'Arial Normal', 'Arial';font-weight:400;">Well done! You win </span><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;color:#FF0000;">5</span><span style="font-family:'Arial Normal', 'Arial';font-weight:400;"> extra coins!</span></p>
         </div>
       </div>
 
@@ -235,7 +235,7 @@
       <div id="u452" class="ax_default label">
         <div id="u452_div" class=""></div>
         <div id="u452_text" class="text ">
-          <p><span>Bravo! You made all shots and win 10 extra coins!</span></p>
+          <p><span style="font-family:'Arial Normal', 'Arial';font-weight:400;">Bravo! You made all shots and win </span><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;color:#FF0000;">10</span><span style="font-family:'Arial Normal', 'Arial';font-weight:400;"> extra coins!</span></p>
         </div>
       </div>
 
