--- a/game.html
+++ b/game.html
@@ -51,7 +51,7 @@
       <div id="u425" class="ax_default label">
         <div id="u425_div" class=""></div>
         <div id="u425_text" class="text ">
-          <p><span>进入页面，弹出窗口提示规则，点击OK跳转充值</span></p><p><span><br></span></p><p><span>充值完成后，进入游戏页面</span></p>
+          <p><span>进入页面，弹出窗口提示规则，点击OK跳转充值（直接到DokyPay的充值页面，充值金额固定50卢比，用户无法更改）</span></p><p><span><br></span></p><p><span>充值完成后，进入游戏页面</span></p>
         </div>
       </div>
 
