--- a/用户统计.html
+++ b/用户统计.html
@@ -62,7 +62,7 @@
       <div id="u631" class="ax_default shape">
         <div id="u631_div" class=""></div>
         <div id="u631_text" class="text ">
-          <p><span>&nbsp; 资金统计</span></p>
+          <p><span>&nbsp; 夺宝统计</span></p>
         </div>
       </div>
 
@@ -381,15 +381,15 @@
       <div id="u673" class="ax_default shape">
         <div id="u673_div" class=""></div>
         <div id="u673_text" class="text ">
-          <p><span>&nbsp; 机器人统计</span></p>
+          <p><span>&nbsp; 发货订单统计</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u674" class="ax_default shape">
-        <div id="u674_div" class=""></div>
+      <div id="u674" class="ax_default box_1">
+        <img id="u674_img" class="img " src="images/用户统计/u674.png"/>
         <div id="u674_text" class="text ">
-          <p><span>&nbsp; 发货订单统计</span></p>
+          <p><span>1）默认情况下，“累计”的三项统计所有时间的数据</span></p><p><span>2）选择了时间段搜索后，“累计”统计该时间段内的数据（“清除”后恢复默认）</span></p>
         </div>
       </div>
 
@@ -397,22 +397,14 @@
       <div id="u675" class="ax_default box_1">
         <img id="u675_img" class="img " src="images/用户统计/u675.png"/>
         <div id="u675_text" class="text ">
-          <p><span>1）默认情况下，“累计”的三项统计所有时间的数据</span></p><p><span>2）选择了时间段搜索后，“累计”统计该时间段内的数据（“清除”后恢复默认）</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u676" class="ax_default box_1">
-        <img id="u676_img" class="img " src="images/用户统计/u676.png"/>
-        <div id="u676_text" class="text ">
           <p><span>名词解释：</span></p><p><span>1）注册用户：当日所有注册的用户数量</span></p><p><span>2）新增充值用户：当日新增的充值用户数量（原先充值过的用户不算在内）</span></p><p><span>3）新增夺宝用户：当日新增参与夺宝的用户数量</span></p><p><span>4）新增夺宝次数：当日新增的夺宝次数，包括除机器人外的所有用户</span></p><p><span>5）新用户花费coins：当日新增夺宝用户花费的coins</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u677" class="ax_default shape">
-        <div id="u677_div" class=""></div>
-        <div id="u677_text" class="text ">
+      <div id="u676" class="ax_default shape">
+        <div id="u676_div" class=""></div>
+        <div id="u676_text" class="text ">
           <p><span>导出</span></p>
         </div>
       </div>
