--- a/game.html
+++ b/game.html
@@ -385,6 +385,14 @@
           <p><span>x 5</span></p>
         </div>
       </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u472" class="ax_default label">
+        <div id="u472_div" class=""></div>
+        <div id="u472_text" class="text ">
+          <p><span>点击OK，退回</span><a id="u473" class="link"><span style="color:#0000FF;">Events</span></a><span>页面</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
