--- a/user_a_s_show.html
+++ b/user_a_s_show.html
@@ -515,7 +515,7 @@
       <div id="u346" class="ax_default label">
         <div id="u346_div" class=""></div>
         <div id="u346_text" class="text ">
-          <p><span>1）未输入内容时，“Send”按钮为灰色不可用</span></p><p><span>2）输入评论字符数达到100时，无法再输入</span></p><p><span>3）输入完成后，点击“Send”，在下方添加该条评论</span></p><p><span>格式为 头像+昵称+时间+内容</span></p><p><span>且该条show的评论数量+1</span></p>
+          <p><span>1）输入评论字符数达到100时，无法再输入</span></p><p><span>2）输入完成后，点击“Send”，判断是否已输入文字</span></p><p><span>&nbsp; a）若是，toast提示：Success</span></p><p><span>&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 并在下方添加该条评论</span></p><p><span>&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 格式为 头像+昵称+时间+内容</span></p><p><span>&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 且该条show的评论数量+1</span></p><p><span>&nbsp; b）若否，toast提示：Please enter your comment!</span></p>
         </div>
       </div>
 
